fix(content.article): fix figure spacing

--- a/src/common/styles/utils/content.article.css
+++ b/src/common/styles/utils/content.article.css
@@ -74,6 +74,10 @@
     }
   }
 
+  & figure + figure {
+    margin-top: calc(var(--ar17-200) * 2);
+  }
+
   /* Audio
    ========================================================================== */
   & figure.audio {
